; ModuleID = '/home/carl/AnghaBench/git/compat/win32/extr_pthread.c_win32_pthread_join.c'
source_filename = "/home/carl/AnghaBench/git/compat/win32/extr_pthread.c_win32_pthread_join.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@INFINITE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @win32_pthread_join(%struct.TYPE_3__* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @INFINITE, align 4
  %11 = call i32 @WaitForSingleObject(i32 %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %24 [
    i32 128, label %13
    i32 129, label %22
  ]

13:                                               ; preds = %2
  %14 = load i8**, i8*** %5, align 8
  %15 = icmp ne i8** %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  %20 = load i8**, i8*** %5, align 8
  store i8* %19, i8** %20, align 8
  br label %21

21:                                               ; preds = %16, %13
  store i32 0, i32* %3, align 4
  br label %27

22:                                               ; preds = %2
  %23 = load i32, i32* @EINVAL, align 4
  store i32 %23, i32* %3, align 4
  br label %27

24:                                               ; preds = %2
  %25 = call i32 (...) @GetLastError()
  %26 = call i32 @err_win_to_posix(i32 %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %24, %22, %21
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @WaitForSingleObject(i32, i32) #1

declare dso_local i32 @err_win_to_posix(i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
